add car functionally working

--- a/CarApp/src/app/viewcar/viewcar.component.html
+++ b/CarApp/src/app/viewcar/viewcar.component.html
@@ -14,7 +14,7 @@ placeholder="Search by name or plate..." >
 <table class="table-bordered">
     <thead>
     <tr>
-      <th>Car ID</th>
+      <!-- <th>Car ID</th> -->
       <th>Name</th>
       <th>Model</th>
       <th>Has Plates</th>
@@ -24,7 +24,7 @@ placeholder="Search by name or plate..." >
   </thead>
   <tbody>
     <tr *ngFor="let car of filteredCars">
-      <td>{{ car.carID }}</td>
+      <!-- <td>{{ car.carID }}</td> -->
       <td>{{ car.name }}</td>
       <td>{{ car.model }}</td>
       <td>{{ car.hasPlates }}</td>
