--- a/CarApp/src/app/addcar/addcar.component.html
+++ b/CarApp/src/app/addcar/addcar.component.html
@@ -1,1 +1,40 @@
-<p>addcar works!</p>
+<h2>Add Car</h2>
+  <nav class="navbar">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li class="disabled">Add Cars</li>
+      <li><a href="/viewcar">View all cars</a></li>
+
+    </ul>
+  </nav>
+
+<form (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="name">Car Name</label>
+    <input type="text" id="name" [(ngModel)]="car.name" name="name" required placeholder="Enter car name">
+  </div>
+  
+  <div class="form-group">
+    <label for="model">Car Model</label>
+    <input type="text" id="model" [(ngModel)]="car.model" name="model" required placeholder="Enter car model">
+  </div>
+  
+  <div class="form-group">
+    <label for="hasPlates">Has Plates?</label>
+    <input type="checkbox" id="hasPlates" [(ngModel)]="car.hasPlates" name="hasPlates">
+  </div>
+  
+  <div class="form-group">
+    <label for="plateNo">Plate Number</label>
+    <input type="text" id="plateNo" [(ngModel)]="car.plateNo" name="plateNo" placeholder="Enter plate number">
+  </div>
+  
+  <div class="form-group">
+    <label for="keyNo">Key Number</label>
+    <input type="text" id="keyNo" [(ngModel)]="car.keyNo" name="keyNo" placeholder="Enter key number">
+  </div>
+  
+  <button type="submit" class="submit-btn">Add Car</button>
+</form>
+
+<!-- <app-success-modal [showModal]="showModal"></app-success-modal> -->
