added hasbooks and fixed hasplates

--- a/CarApp/src/app/addcar/addcar.component.html
+++ b/CarApp/src/app/addcar/addcar.component.html
@@ -23,6 +23,11 @@
     <label for="hasPlates">Has Plates?</label>
     <input type="checkbox" id="hasPlates" [(ngModel)]="car.hasPlates" name="hasPlates">
   </div>
+
+  <div class="form-group">
+    <label for="hasBooks">Has Books?</label>
+    <input type="checkbox" id="hasBooks" [(ngModel)]="car.hasBooks" name="hasBooks">
+  </div>
   
   <div class="form-group">
     <label for="plateNo">Plate Number</label>
