--- a/CarApp/src/app/home/home.component.html
+++ b/CarApp/src/app/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<h1>Welcome to the Car Management System</h1>
+
+
+<div class="button-container">
+  <a href="/viewcar" class="button">View Cars</a>
+  <a href="/addcar" class="button">Add Cars</a>
+</div>
