--- a/CarApp/src/app/viewcar/viewcar.component.html
+++ b/CarApp/src/app/viewcar/viewcar.component.html
@@ -20,6 +20,8 @@ placeholder="Search by name or plate..." >
       <th>Has Plates</th>
       <th>Plate Number</th>
       <th>Key Number</th>
+      <th>Has Books</th>
+
     </tr>
   </thead>
   <tbody>
@@ -30,6 +32,8 @@ placeholder="Search by name or plate..." >
       <td>{{ car.hasPlates }}</td>
       <td>{{ car.plateNo }}</td>
       <td>{{ car.keyNo }}</td>
+      <td>{{ car.hasBooks }}</td>
+
     </tr>
   </tbody>
 </table>
