--- a/CarApp/src/app/addcar/addcar.component.scss
+++ b/CarApp/src/app/addcar/addcar.component.scss
@@ -50,7 +50,7 @@ body, html {
     background-color: #333;
     padding: 10px;
   }
-  
+
   .navbar ul {
     list-style-type: none;
     margin: 0;
@@ -101,3 +101,21 @@ body, html {
   .form-group input[type="checkbox"] {
     width: auto;
   }
+
+
+
+
+  // .location-button {
+  //   padding: 10px 15px;
+  //   background-color: #4CAF50;
+  //   color: white;
+  //   border: none;
+  //   font-size: 16px;
+  //   cursor: pointer;
+  //   margin-top: 20px;
+  // }
+  
+  // .location-button:hover {
+  //   background-color: #45a049;
+  // }
+  
