--- a/CarApp/src/app/home/home.component.html
+++ b/CarApp/src/app/home/home.component.html
@@ -4,4 +4,5 @@
 <div class="button-container">
   <a href="/viewcar" class="button">View Cars</a>
   <a href="/addcar" class="button">Add Cars</a>
+  <a href="/location" class="button">Add Locations</a>
 </div>
