--- a/CarApp/src/app/location/location.component.html
+++ b/CarApp/src/app/location/location.component.html
@@ -3,6 +3,8 @@
       <li><a href="/">Home</a></li>
       <li><a href="/addcar">Add Cars</a></li>
       <li> <a href="/viewcar">View Cars</a></li> <!-- Greyed out View Cars link -->
+      <li class="disabled">Add a location</li>
+
     </ul>
   </nav>
 <div class="location">
