--- a/CarApp/src/app/addcar/addcar.component.html
+++ b/CarApp/src/app/addcar/addcar.component.html
@@ -4,7 +4,7 @@
       <li><a href="/">Home</a></li>
       <li class="disabled">Add Cars</li>
       <li><a href="/viewcar">View all cars</a></li>
-      <li><a href="/location">Add a location</a></li>
+      <li><a href="/location">Locations</a></li>
 
 
     </ul>
